# car-score-analysis

./: .bandit  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CI.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_workers.py
.github/: README.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  container.py  database.py  main.py
app/api/: __init__.py
app/application/: __init__.py  dtos.py
app/application/use_cases/: __init__.py  price_use_cases.py  reliability_use_cases.py  safety_use_cases.py  vehicle_use_cases.py
app/domain/: __init__.py
app/domain/pricing/: __init__.py  entity.py  repository.py  value_objects.py
app/domain/reliability/: __init__.py  entity.py  repository.py  value_objects.py
app/domain/safety/: __init__.py  entity.py  repository.py  value_objects.py
app/domain/vehicles/: __init__.py  entity.py  repository.py  value_objects.py
app/infrastructure/: __init__.py
app/infrastructure/persistence/: __init__.py  mappers.py  orm_models.py  repositories.py
app/models/: __init__.py  orm.py
app/presentation/: __init__.py  dto_mappers.py
app/schemas/: __init__.py
app/services/: __init__.py  services.py
app/shared/: __init__.py  exceptions.py  types.py
app/workers/: __init__.py  workers.py
infra/: .gitignore  Makefile  alb.tf  api_gateway.tf  ecs.tf  main.tf  outputs.tf  providers.tf  rds.tf  sqs.tf  variables.tf
tests/: __init__.py  conftest.py  test_example.py
(+5 files in other folders)
